added burger.js file to handle function in handlebar files

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
     <ul>
         {{#each burgers}}
         {{#unless eaten}}
-        {{name}} <button class="changeEaten btn-sm" data-id="{{id}}" data-newEat="{{eaten}}"
+        {{name}} <button class="burgerEat btn-sm" data-id="{{id}}" data-newEat="{{eaten}}"
             type="submit">DEVOUR!</button>
         {{/unless}}
         {{/each}}
